--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
       </div>
     </header>
     <main class="mdl-layout__content">
-      <!-- Simple Textfield for integers-->
       <form action="#">
+        <div>Plese enter your age.</div>
+        <br />
         <div class="mdl-textfield mdl-js-textfield">
           <!-- input pattern attribute -->
           <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="user-age" />
